# note-app

./: .gitignore  Cargo.toml  Procfile  Rocket.toml  RustConfig  package.json  tailwind.config.js  webpack.config.js
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2020-09-04-161703_users/: up.sql
migrations/2020-09-10-025324_notes/: up.sql
src/: index.css  main.rs  note.rs  routes.rs  schema.rs  user.rs
src/models/: mod.rs
templates/: about.html.tera  base.html.tera  index.html.tera  new-note.html.tera  singin.html.tera  singout.html.tera
